# Duke

./: .dockerignore  .infisical.json  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml
.github/workflows/: build.yaml  deploy.yaml  deploy.yml
logging/: logging.rs  mod.rs
src/: apidoc.rs  handlers.rs  main.rs  routes.rs  schemas.rs
src/apidoc/: mod.rs  openapi.rs
src/db/: connection.rs  mod.rs
src/handlers/: mod.rs  task.rs  user.rs
src/routes/: mod.rs
src/schemas/: task.rs
