[package]
name = "duke"
version = "0.1.0"
edition = "2021"

[dependencies]
# Swagger Integration - Component
utoipa = "3.0"
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }

# Base Server Dependencies
bytes = "1.7.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
warp = "0.3.7"

[[bin]]
name = "duke"
path = "src/main.rs"
