[package]
name = "duke"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
warp = "0.3.7"
tracing-subscriber = "0.2"
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
diesel = { version = "2.2", features = ["postgres"] }
dotenv = "0.15"

[[bin]]
name = "duke"
path = "src/main.rs"
