[package]
name = "duke"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
diesel = { version = "2.2", features = ["postgres"] }
dotenv = "0.15"

[[bin]]
name = "duke"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockall = "0.11"  # For mocking
warp = "0.3"      # Already in your project for the endpoints
